# textileAI

./: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
backend/: .coverage  alembic.ini  main.py  mypy.ini  pyproject.toml  textile-search-backend.spec
backend/app/: __init__.py  exceptions.py
backend/app/api/: duplicates.py  health.py  history.py  images.py  import_.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: models.py  session.py
backend/app/services/: duplicate_scanner.py  embedder.py  faiss_index.py  field_parser.py  importer.py  ocr.py  protocols.py  sync.py  thumbnail.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/: conftest.py  test_api_duplicates.py  test_api_e2e.py  test_api_health.py  test_api_history.py  test_api_images.py  test_api_import.py  test_config.py  test_duplicate_scanner.py  test_duplicate_scanner_coverage.py  test_e2e_real.py  test_faiss_index.py  test_faiss_index.py.bak  test_field_parser.py  test_import_worker.py  test_phase0.py  test_phase1.py  test_session.py  test_sync_integration.py  test_thumbnail.py
docs/: API_SPEC.md  DEVELOPER.md  MAINTAINER_RUNBOOK.md  USER_MANUAL.md  USER_MANUAL_zhTW.md
playwright-report/: index.html
resources/: installer.nsh
shared/types/: ipc.ts
src/main/: index.ts  ipc.ts  logger.ts  sidecar.ts  watcher.ts
src/preload/: index.ts
src/renderer/: index.html  tsconfig.json
src/renderer/src/: App.tsx  index.css  main.tsx  window.d.ts
src/renderer/src/components/: ImageDetailPanel.tsx  LoadingScreen.tsx  StatusBar.tsx
src/renderer/src/i18n/: index.ts
src/renderer/src/i18n/locales/: en.json  zh-TW.json
src/renderer/src/pages/: DuplicatesPage.tsx  GalleryPage.tsx  HistoryPage.tsx  ImportPage.tsx  SearchPage.tsx  SettingsPage.tsx
test-results/: .last-run.json
test-results/sync-File-system-sync-new--03302-ched-folder-is-auto-indexed-retry1/: error-context.md
tests/e2e/: README.md  helpers.ts  import.spec.ts  search.spec.ts  sync.spec.ts
tests/stress/: README.md  run_stress.py
