[project]
name        = "textile-search-backend"
version     = "1.0.0"
description = "AI-powered textile image search sidecar (FastAPI + FAISS + PaddleOCR)"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",   # multipart file uploads
    # Database ORM + migrations
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    # Data validation
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    # Structured JSON logging
    "python-json-logger==2.0.7",
    # Image processing
    "Pillow==10.4.0",
    # Vector similarity search
    "faiss-cpu==1.8.0",
    # Fuzzy string matching (supplier deduplication)
    "rapidfuzz==3.9.3",
    # Async file I/O
    "aiofiles==24.1.0",
    "numpy>=1.26,<2.0",
]

# ── Optional dependency groups ──────────────────────────────────────────────
# Install with:  uv sync --extra ml
#                uv sync --extra ocr
#                uv sync --extra ml --extra ocr   (full production install)
[project.optional-dependencies]
ml = [
    # FashionCLIP — ViT-B/32 visual embedder
    # Downloads ~600 MB of weights on first run.
    "torch>=2.3.0",
    "transformers>=4.42.0",
]
ocr = [
    # PaddleOCR — label text extraction
    # Requires the paddlepaddle CPU wheel first:
    #   uv pip install paddlepaddle --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple
    "paddleocr>=2.7.3",
]

# ── Development / test dependencies ─────────────────────────────────────────
# Install with:  uv sync --group dev
[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",              # async FastAPI test client
    "mypy==1.10.1",
    "types-aiofiles==24.1.0.20240626",
]

# ── Entry points ─────────────────────────────────────────────────────────────
[project.scripts]
textile-backend = "main:app"   # for uvicorn: uv run uvicorn main:app

# ── Tool configuration ───────────────────────────────────────────────────────
[tool.uv]
# Always install dev group automatically in development
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths   = ["tests"]

[tool.mypy]
python_version            = "3.12"
strict                    = true
warn_return_any           = true
warn_unused_configs       = true
disallow_any_generics     = true
no_implicit_optional      = true
warn_unreachable          = true
plugins                   = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["faiss.*", "paddle.*", "paddleocr.*",
          "transformers.*", "torch.*",
          "PIL.*", "pythonjsonlogger.*", "uvicorn.*"]
ignore_missing_imports = true
