[project]
name        = "textile-search-backend"
version     = "1.0.0"
description = "AI-powered textile image search sidecar (FastAPI + FAISS + PaddleOCR)"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",   # multipart file uploads
    # Database ORM + migrations
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    # Data validation
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    # Structured JSON logging
    "python-json-logger==2.0.7",
    # Image processing
    "Pillow==10.4.0",
    # Vector similarity search
    "faiss-cpu>=1.14.2",
    # Fuzzy string matching (supplier deduplication)
    "rapidfuzz==3.9.3",
    # Async file I/O
    "aiofiles==24.1.0",
    # NumPy 2.x is required by current torch/transformers/onnxruntime/rapidocr
    # and by Pillow >=10.3 (uses numpy.typing.NDArray at import time).
    "numpy>=1.26",
    # ML — DINOv2 image embeddings via Hugging Face transformers on
    # Apple Silicon MPS (bf16). Weights are ~340 MB, downloaded on first run.
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=4.45.0",
    # OCR — RapidOCR runs PP-OCRv4 detection/recognition models on ONNX
    # Runtime. Stable on Apple Silicon (unlike paddlepaddle, which segfaults).
    "rapidocr>=3.8.0",
    "onnxruntime>=1.20.0",
]

# Optional groups retained for compatibility with old `uv sync --extra ml`
# invocations from CI scripts; in this repo the core install already
# includes everything needed.
[project.optional-dependencies]
ml  = []
ocr = []

# ── Development / test dependencies ─────────────────────────────────────────
# Install with:  uv sync --group dev
[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",              # async FastAPI test client
    "mypy==1.10.1",
    "ruff==0.5.1",
    "types-aiofiles==24.1.0.20240626",
]

# ── Entry points ─────────────────────────────────────────────────────────────
[project.scripts]
textile-backend = "main:app"   # for uvicorn: uv run uvicorn main:app

# ── Tool configuration ───────────────────────────────────────────────────────
[tool.uv]
# Always install dev group automatically in development
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths   = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
